tests/invalid/function_duplicate_keyword_value/main.py
def add(a: int, b: int) -> int:
    return a + b

if __name__ == "__main__":
    x: int = add(1, a=2)
